--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>To-Do List</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="header">
-    <center><h1>To-Do List</h1>
-	<p id="subtitle">For a More Organized Day</p></center>
-  </div><br>
-  <form>
-    <input type="text" id="task-input" placeholder="Enter task...">
-    <button type="button" id="add-btn">Add</button>
-    <button type="button" id="clear-btn">Clear</button>
-  </form><br>
-  <ul id="task-list"></ul>
-  <center><p>Devloped by Pavara Mirihagalla with the assist of <a href="https://chat.openai.com">ChatGPT.</a></center>
-  <button class="rounded">&#8593;</button>
-  <script src="script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>To-Do List | Demo</title>
+		<link rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/x-icon" href="src/fav.png">
+		<link rel="apple-touch-icon" href="src/fav.png">
+	</head>
+	<body>
+		
+		<div class="header">
+		<center><h1>To-Do List</h1>
+		<p id="subtitle">For a More Organized Day</p></center>
+		</div><br>	
+		<center><marquee><p>This Demo is made for a School Project. Developed by Pavara Mirihagalla. Add this Page as a favourite to access Quickly (Ctrl + D).</p></marquee></center><br>
+		<form>
+			<input type="text" id="task-input" placeholder="Enter task...">
+			<button type="button" id="add-btn">Add</button>
+			<button type="button" id="clear-btn">Clear</button>
+		</form><br>
+		<ul id="task-list"></ul>
+		<hr><center><p>Devloped by Pavara Mirihagalla with the assist of <a href="https://chat.openai.com">ChatGPT.</a></center>
+		<button class="rounded">&#8593;</button>
+		<script src="script.js"></script>
+	</body>
 </html>
