--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>To-Do List | Demo</title>\
+		<title>To-Do List | Demo</title>
 		
 		<!--Links-->
 		<link rel="stylesheet" href="style.css">
@@ -23,14 +23,17 @@
 		
 		<!--Form-->
 		<form>
-			<input type="text" id="task-input" placeholder="Enter task...">
+			<center><input type="text" id="task-input" placeholder="Enter your task"></center><br>
+			<center><div class="addclearbtns">
 			<button type="button" id="add-btn">Add</button>
-			<button type="button" id="clear-btn">Clear</button>
+			<button type="button" id="clear-btn">Clear</button></div></center>
 		</form><br>
 		<ul id="task-list"></ul>
 		
 		<!--Footer-->
+		<footer>
 		<hr><center><p>Devloped by Pavara Mirihagalla with the assist of <a href="https://chat.openai.com">ChatGPT.</a></center>
+		</footer>
 		<button class="rounded">&#8593;</button>
 		<script src="script.js"></script>
 	</body>
