--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div><br>
 
 		<!--Notification Strip-->	
-		<center><marquee><p>This Demo is made for a School Project. Developed by Pavara Mirihagalla. Add this Page as a favourite to access Quickly (Ctrl + D).</p></marquee></center><br>
+		<center><marquee><p>This Demo is made for a School Project. Developed by Pavara Mirihagalla. Add this Page as a favourite to access Quickly (Ctrl + D).</p></marquee></center><hr><br>
 		
 		<!--Form-->
 		<form>
